inputs/dev_semstamp_last_2/logs/logfile_138.log
/local1/borito1907/anaconda3/envs/watermark/lib/python3.10/site-packages/transformers/utils/hub.py:127: FutureWarning: Using `TRANSFORMERS_CACHE` is deprecated and will be removed in v5 of Transformers. Use `HF_HOME` instead.
  warnings.warn(
[nltk_data] Downloading package punkt to /home/borito1907/nltk_data...
[nltk_data]   Package punkt is already up-to-date!
Traceback (most recent call last):
  File "/local1/borito1907/impossibility-watermark/watermarked_text_generator.py", line 3, in <module>
    from watermarker_factory import get_watermarker
  File "/local1/borito1907/impossibility-watermark/watermarker_factory.py", line 3, in <module>
    from watermarkers import UMDWatermarker, UnigramWatermarker, EXPWatermarker, SemStampWatermarker, AdaptiveWatermarker
  File "/local1/borito1907/impossibility-watermark/watermarkers/__init__.py", line 5, in <module>
    from .adaptive import AdaptiveWatermarker
  File "/local1/borito1907/impossibility-watermark/watermarkers/adaptive.py", line 97
    log.info(self.generator_kwargs)
    ^^^
IndentationError: expected an indented block after 'if' statement on line 75
